# Beach-Sweep

./: .gitignore  README.md  TESTING.md
hailo_docker/: docker-compose.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/decision_package/share/decision_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_package/share/motor_package/: package.sh  package.xml
install/sensor_package/share/sensor_package/: package.sh  package.xml
install/vision_package/share/vision_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/decision_package/: package.xml  setup.cfg  setup.py
src/decision_package/decision_package/: decision_node.py
src/decision_package/launch/: decision.launch.py
src/decision_package/scripts/: decision_node
src/motor_package/: package.xml  setup.py  test.py
src/motor_package/launch/: motor.launch.py
src/motor_package/motor_package/: __init__.py  motor_node.py
src/motor_package/scripts/: motor_node
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: Detection.msg  Detections.msg
src/sensor_package/: package.xml  setup.py
src/sensor_package/launch/: sensor.launch.py
src/sensor_package/scripts/: sensor_node
src/sensor_package/sensor_package/: __init__.py  sensor_node.py
src/vision_ia_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_ia_core/launch/: robot_system.launch.py  vision.launch.py  vision_ia.launch.py
src/vision_ia_core/msg/: Detections.msg
src/vision_ia_core/scripts/: camera_node  detect_node
src/vision_ia_core/vision_ia_core/: camera_node.py  detect_node.py
src/vision_ia_msgs/: CMakeLists.txt  package.xml
src/vision_ia_msgs/msg/: Detection.msg  Detections.msg
src/vision_package/: setup.py
