<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decision_package</name>
  <version>0.0.0</version>
  <description>This package contains the logic behind the robot's actions</description>
  <maintainer email="alexis_chacont@hotmail.com">dietpi</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>vision_ia_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
