<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_package</name>
  <version>2.0.0</version>
  <description>Package for controlling motors and servos via GPIO using lgpio.</description>
  <maintainer email="elcorreodegallo@gmail.com">Jaime Morales</maintainer>
  <maintainer email="alexis_chacont@hotmail.com">Alexis Chacon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- lgpio is a system-level Python library. Ensure it is installed on your system. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
