<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_package</name>
  <version>2.0.0</version>
  <description>Package for sensor data acquisition, primarily TF-Luna LiDAR via UART.</description>
  <maintainer email="andresalgadomena@gmail.com">Andre Salgado</maintainer>
  <maintainer email="alexis_chacont@hotmail.com">Alexis Chacon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- pyserial is a system-level Python library. Ensure it is installed. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
