<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_ia_core</name>
  <version>0.0.0</version>
  <description>This package contains the vision IA core functionalities</description>
  <maintainer email="eli@todo.todo">eli</maintainer>
  <license>MIT</license>

  <!--Dependencias Python y ROS2-->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>python3-ultralytics-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
